--- a/Website/index.html
+++ b/Website/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="Website_Home.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
 
 
     <title>Website Template</title>
@@ -167,6 +167,6 @@
         </footer>
     </div> <!--Home page end-->
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src="js/Website_Home.js"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
