--- a/index.html
+++ b/index.html
@@ -191,6 +191,6 @@
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
-<script type = 'text/javascript' src='js/index.js'></script>
+<script type = 'text/javascript' src='index.js'></script>
 </body>
 </html>
