--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="index.css">
-
+  <link rel="stylesheet" type="text/css" href="index.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 
     <title>Website Template</title>
 </head>
@@ -191,6 +192,8 @@
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
+<script type="text/javascript" src= 'https://www.jsdelivr.com/projects/jquery.slick'></script>
+<script type="text/javascript" src= 'slick/slick.min.js'></script>
 <script type = 'text/javascript' src='index.js'></script>
 </body>
 </html>
