--- a/index.html
+++ b/index.html
@@ -58,16 +58,12 @@
         
 
     <div id = "contentArea">
-        <section id="featuredFilth">
-            <div id ="slider"> <!--jqury slider function -->
-                <ul class="headLines">
-                    <li >Placeholders For Carousel Ads</li> 
-                    <li >SALES!</li>
-                    <li >OMG COOL SHIT</li>
-                    <li >So WOW</li>
-                </ul>
-            </div>
-        </section><!--headline end-->
+            <div class ="featuredFilth"> <!--jqury slider function -->
+                <div>Placeholders For Carousel Ads</div> 
+                <div>SALES!</div>
+                <div>OMG COOL SHIT</div>
+                <div>So WOW</div>
+            </div><!--headline end-->
             
         <section id="contentA">
             <article></article>
@@ -192,7 +188,6 @@
 
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
-<script type="text/javascript" src= 'https://www.jsdelivr.com/projects/jquery.slick'></script>
 <script type="text/javascript" src= 'slick/slick.min.js'></script>
 <script type = 'text/javascript' src='index.js'></script>
 </body>
